--- a/CelularHerencia/Biblioteca/Biblioteca.csproj
+++ b/CelularHerencia/Biblioteca/Biblioteca.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CelularConPlan.cs" />
+    <Compile Include="CelularCtaControlada.cs" />
     <Compile Include="IServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
