Ultima Clase termino del proyecto

--- a/CelularHerencia/Biblioteca/Biblioteca.csproj
+++ b/CelularHerencia/Biblioteca/Biblioteca.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="CelularConPlan.cs" />
     <Compile Include="CelularCtaControlada.cs" />
+    <Compile Include="CelularCtaIlimitada.cs" />
     <Compile Include="IServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
